--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,16 @@
+set -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
 set -g default-terminal "screen-256color"
 set -g mouse on
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -sel clip -i"
+
+bind-key 'h' select-pane -L
+bind-key 'j' select-pane -D
+bind-key 'k' select-pane -U
+bind-key 'l' select-pane -R
